--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons")
+    link(rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css")
   body
     block content
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(defer src="https://code.getmdl.io/1.3.0/material.min.js")
     script(src="/javascripts/index.js")
