--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,5 +8,6 @@ html
   body
     block content
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(src="/javascripts/jquery.loadTemplate.min.js")
     script(defer src="https://code.getmdl.io/1.3.0/material.min.js")
     script(src="/javascripts/index.js")
